fix button align by hiding composer section

--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,10 @@ h1 {
 	padding: 0;
 }
 
+h5 {
+	margin: 0;
+}
+
 /*-----Mix Grid Starts Here-----*/
 
 hr {
@@ -245,17 +249,24 @@ hr {
 	grid-template-rows: auto;
 	column-gap:20px;
 	text-align: center;
+	align-self: start;
+}
+
+.hidden {
+	visibility: hidden;
+	padding-bottom: 40px;
+	margin-bottom: 0;
 }
 
 .mix__tag {
 	display: grid;
 	justify-content: flex-start;
-	align-self: start;
 }
 
 .mix__image {
-	display: grid;
-	align-self: start;
+	display: block;
+	width: 100%
+	height: auto;
 }
 
 .mix__content {
@@ -292,7 +303,7 @@ hr {
 }
 
 .mix__content {
-
+	display: block;
 }
 
 .button--outline {
@@ -323,11 +334,11 @@ h5 {
 }
 
 .mix__name {
+	display: block;
 	text-align: center;
 	text-decoration: none;
 	color: #19111c;
-	padding: 0
-	margin: 0;
+	padding-top: 20px;
 }
 
 .compiled-by {
@@ -340,6 +351,7 @@ h5 {
 	letter-spacing: -.01em;
 	padding-top: 20px;
 	padding-bottom: 40px;
+	margin: 0;
 }
 
 
